data/derived/sp14/progs/unify/prog2640.ml.out
Characters 127-178:
  | _ -> ((c + x' + x'') / 10), ((c + x' + x'') mod 10) :: s
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
